assets/Zed/sass/main.scss
/**
 * Copyright (c) 2016-present Spryker Systems GmbH. All rights reserved.
 * Use of this software requires acceptance of the Evaluation License Agreement. See LICENSE file.
 */

.page-heading {
    display: none;
}

.cdk-overlay-container.spy-drawer-container-overlay {
    //TODO[Rustem Zakiev]: Resolve it without using important
    z-index: 2001 !important;
}

.config-container {
    overflow: hidden;
    position: relative;
    min-height: 650px;
    width: 100%;
    margin: 0 auto;
}

.config-container iframe {
    position: absolute;
    border: 0;
    height: 100%;
    left: 0;
    top: 0;
    width: 100%;
}

@media screen and (max-width: 65.9375em) {
    .config-container {
        min-height: 460px;
        width: 90%;
    }
}

@media screen and (max-width: 39.9375em) {
    .config-container {
        min-height: 240px;
        width: 100%;
    }
}

